# its-live-monitoring

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  cloudformation.yml  environment.yml  mattermost-update.py  pyproject.toml  requirements-all.txt  requirements-its_live_monitoring.txt  requirements-landsat.txt  requirements-status-messages.txt  ruff.toml
.github/: CODEOWNERS
.github/workflows/: build-and-deploy.yml  build.yml  deploy-prod.yml  deploy-test.yml  deploy.yml  release-checklist-comment.yml  release.yml  static-analysis.yml  static-anaysis.yml  status_update.yml  tag-version.yml  tests.yml
docs/: deadletter_queue_playbook.md
its_live_monitoring/: cloudformation-subscribe-in-eu.yml
its_live_monitoring/src/: burst_id_to_opera_frame_ids.json  constants.py  landsat.py  main.py  message.json  opera_frame_to_burst_ids.json  sentinel1.py  sentinel1_tiles_to_process.json  sentinel2.py  sentinel2_tiles_to_process.json
landsat/: cloudformation.yml
landsat-backprocessing/: 1_get_reference_scenes.py  2_build_pair_list.py  3_deduplicate_pair_list.py  README.md  submit_hyp3_jobs.py
landsat-backprocessing/pairlist-metrics/: parse_pairlist.py  reference-acquisition-month-counts.csv  sample_deduplicated_pairs.csv
landsat/src/: landsat_tiles_to_process.json  main.py  tile_list.json
scripts/: test-sns-cf.yml
sentinel-2-gap-filling/: 0.5-get-takes-for-scene.py  1-get-inventory-of-qualifying-scenes.py  2-build-pair-list-from-qualifying-scenes.py  3_deduplicate_pair_list.py  4-submit-s2-autorift-jobs.py  README.md
sentinel2/src/: main.py  sentinel2_tiles_to_process.geojson
src/: landsat.py  main.py  sentinel2_tiles_to_process.json
status-messages/: cloudformation.yml
status-messages/src/: mattermost-update.py  status_messages.py
tests/: cfg.env  conftest.py
tests/data/: LC08_L1GT_208119_20190225_20200829_02_T2_pairs.pkl  LC08_L1TP_138041_20240128_20240207_02_T1_pairs.pkl  sentinel2_sample_item_collection.json  sentinel2_sample_pairs.parquet
tests/integration/: landsat-l8-not-over-ice.json  landsat-l8-off-nadir-no-pairs.json  landsat-l8-off-nadir-valid.json  landsat-l8-too-many-clouds.json  landsat-l8-valid.json  landsat-l9-wrong-tier.json  sentinel1-burst-multiframe-valid.json  sentinel1-burst-not-over-ice.json  sentinel1-burst-valid.json  sentinel1-burst-wrong-polarization.json  sentinel2-not-over-ice.json  sentinel2-valid-1.json  (+4 more)
(+22 files in other folders)
